--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -10,7 +10,7 @@
 <h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}" width="150" height="150"/>
 
-<form method="POST" th:object="${taco}">
+<form method="POST" th:action="@{/design}" th:object="${taco}">
   <div class="grid">
 
   <div class="ingredient-group" id="wraps">
